# clarkmem

./: .env.example  ARCHITECTURE.md  BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
examples/: quickstart.py
integrations/hermes/: SKILL.md
skills/clarkmem/: SKILL.md
skills/clarkmem-dev/: SKILL.md
src/clarkmem/: __init__.py  cli.py  config.py  core.py  extractor.py  loader.py  mcp_server.py  server.py
src/clarkmem/backends/: __init__.py  local_backend.py  neo4j_backend.py
src/cognify/: __init__.py  cli.py  config.py  core.py  extractor.py  mcp_server.py  server.py
src/cognify/backends/: local_backend.py  neo4j_backend.py
tests/: test_smoke.py
