[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognify-kg"
version = "0.5.0"
description = "Lightweight document-ingestion + typed knowledge-graph engine for agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "requests>=2.31",
]

[project.optional-dependencies]
# embedders for the neo4j/server backend (the local backend embeds via ChromaDB's
# bundled ONNX MiniLM and needs neither): pick "st" or the torch-free "fastembed".
st = ["sentence-transformers>=2.2"]
fastembed = ["fastembed>=0.4"]
local = ["chromadb>=0.5", "networkx>=3.0", "pypdf>=4.0"]
neo4j = ["neo4j>=5.0", "turbovec>=0.1", "pypdf>=4.0"]
claude = ["mcp>=1.2"]                       # MCP server for Claude Code / Desktop
serve = ["fastapi>=0.110", "uvicorn>=0.27"] # HTTP server (Hermes / any runtime)
all = ["chromadb>=0.5", "networkx>=3.0", "neo4j>=5.0", "turbovec>=0.1", "pypdf>=4.0",
       "mcp>=1.2", "fastapi>=0.110", "uvicorn>=0.27",
       "sentence-transformers>=2.2", "fastembed>=0.4"]

[project.scripts]
cognify = "cognify.cli:main"
cognify-mcp = "cognify.mcp_server:main"
cognify-serve = "cognify.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# E702: the CLI/arg-wiring deliberately uses compact `stmt; stmt` one-liners
ignore = ["E702", "E731", "E741"]
